[tool.poetry]
name = "trapi-testing-tools"
version = "0.1.0"
description = "A collection of tools for testing and analyzing all things TRAPI."
authors = ["tokebe <43009413+tokebe@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "trapi_testing_tools" }]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
typer = { extras = ["all"], version = "^0.12.5" }
httpx = "^0.27.2"
pydantic = "^2.9.2"
tqdm = "^4.66.5"
translator-testing-model = "^0.3.2"
survey = "^5.4.2"
inquirerpy = "^0.3.4"
urlextract = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tt = "trapi_testing_tools.main:main"
ttt = "trapi_testing_tools.main:test_shortcut"
